Mean GPA Tutoring

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[2392 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -781,14 +781,25 @@
        "2127             0  3.812757         0.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Test Code\n",
     "top10students = student_data.sort_values(by = 'GPA', ascending = False)\n",
     "top10students.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 1 What is the average GPA of students who receive tutoring versus no tutoring?\n",
+    "gpa_tutoring = student_data[student_data['Tutoring'] == 1]['GPA'].mean()"
    ]
   }
  ],
