mean gpa no tutoring

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -794,12 +794,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1083247273414276"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Question 1 What is the average GPA of students who receive tutoring versus no tutoring?\n",
-    "gpa_tutoring = student_data[student_data['Tutoring'] == 1]['GPA'].mean()"
+    "\n",
+    "#Average GPA of Students with Tutoring\n",
+    "gpa_tutoring = student_data[student_data['Tutoring'] == 1]['GPA'].mean()\n",
+    "\n",
+    "#Average GPA of Students with No Tutoring\n",
+    "gpa_no_tutoring = student_data[student_data['Tutoring'] == 0]['GPA'].mean()\n",
+    "\n",
+    "gpa_tutoring\n"
    ]
   }
  ],
