--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -848,6 +848,46 @@
     "plt.ylabel('Average GPA')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  StudyTimeGroup       GPA\n",
+      "0      0-5 hours  1.691647\n",
+      "1     6-10 hours  1.849145\n",
+      "2    11-15 hours  1.999016\n",
+      "3    16-20 hours  2.105937\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_13464\\2204871723.py:10: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  average_gpa_by_study_time = student_data.groupby('StudyTimeGroup')['GPA'].mean().reset_index()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 2 What is the average GPA of students grouped by weekly study hours?\n",
+    "\n",
+    "\n",
+    "bins = [0, 5, 10, 15, 20]\n",
+    "labels = ['0-5 hours', '6-10 hours', '11-15 hours', '16-20 hours']\n",
+    "\n",
+    "\n",
+    "#Average GPA of Students of students grouped by weekly study hours\n",
+    "student_data['StudyTimeGroup'] = pd.cut(student_data['StudyTimeWeekly'], bins=bins, labels=labels, include_lowest=True)\n",
+    "average_gpa_by_study_time = student_data.groupby('StudyTimeGroup')['GPA'].mean().reset_index()\n",
+    "\n",
+    "print(average_gpa_by_study_time)\n"
    ]
   }
  ],
